# emdros

./: .gitignore  .travis.yml  AUTHORS  Android.mk  COPYING  ChangeLog  Doxyfile  Emdros.pro  INSTALL  INSTALL.Mac.txt  INSTALL.Win32.txt  LICENSE  LICENSE.md  Makefile.am  NEWS  README  README-Emdros-on-Android.txt  README-Emdros-on-iOS.txt  README.md  RPM-GPG-KEY-ulrikp_emdros_org  TODO.md  TODO.txt  build-deb.sh  callgrind.sh  commit_tarball.sh  configure.ac  emdros.pc.in  emdros.spec.in  generate_extrafiles.py.in  install_mac.sh.in  mingw.mak  py-compile  rmfiles.sh  signthis.bat  valgrind.sh  windows.mak
EMdF/: EMdF.pro  Makefile.am  arena.cpp  bpa.cpp  bpt2emdfdb.cpp  bptemdfdb.cpp  conn.cpp  crc32_emdros.cpp  djgpp.mak  emdf_enums.cpp  emdf_ffeatures.cpp  emdf_hash.cpp  emdf_output.cpp  emdf_primes.cpp  emdf_value.cpp  emdf_wstring.cpp  emdfdb.cpp  encryption.cpp  enum_const_cache.cpp  infos.cpp  inst.cpp  inst_object.cpp  json.re  json.yxx  json_classes.cpp  json_lexer.cpp  json_parser.cpp  jsonpars.h  logging.cpp  lzma_emdros.cpp  make_primes_list.py  mingw.mak  minidom.cpp  monads.cpp  mysqlconn.cpp  mysqlemdfdb.cpp  pgconn.cpp  pgemdfdb.cpp  qdxml.cpp  smart_vector.cpp  (+11 more)
MQL/: MQL.pro  Makefile.am  djgpp.mak  emdros_environment.cpp  emdros_reserved_words.cpp  mingw.mak  mql.lxx  mql.re  mql.yxx  mql_R.cpp  mql_database_statements.cpp  mql_enumeration_statements.cpp  mql_error.cpp  mql_execute.cpp  mql_execution_environment.cpp  mql_features_statements.cpp  mql_get_query.cpp  mql_get_query.lxx  mql_gq.re  mql_helper_classes.cpp  mql_lexer.cpp  mql_meta_statements.cpp  mql_monads_statements.cpp  mql_object.cpp  mql_object_statements.cpp  mql_object_statements.cpp.original  mql_object_type_statements.cpp  mql_parser.cpp  mql_query.cpp  mql_result.cpp  mql_segment_statements.cpp  mql_select_statements.cpp  mql_sheaf.cpp  mql_statement.cpp  mql_utility.cpp  mql_yylex.cpp  mqlpars.h  unistd.h.win32  win32.mak  windows.mak
SWIG/: Makefile.am  download_and_make_local_swig.sh  mingw.mak  win32.mak  windows.mak
amalgamation/: Makefile.am  amalgamation.json  amalgamation.xml  mingw.mak  mkamalgamation.cpp  mkamalgamation.py  win32.mak  windows.mak
doc/: ChangeLog-doc.txt  Getting-Started.lyx  HOW-TO-USE.txt  MQL-Programmers-Guide.lyx  MQL-Query-Guide.lyx  MQL-Query-subset.lyx  MQL-README.txt  Makefile.am  Monad-Sets.lyx  NEWS-doc.txt  New-EMdF.lyx  README-doc.txt  README.MySQL.Win32.txt  Rel-EMdF.lyx  Standard-MdF.lyx  TheDoor.fig  ThisDoor.html  agexport.1  bootstrapping.txt  bptdump.1  emdros.1  eqt.1.in  fts_filters.5  fts_harvester.1  fts_indexer.1  hal_build_db.1  index.html  mql.1  mqldump.1  mqlhal.1.in  mqllingtry.1  mqltry.1  negraimport.1  pennimport.1  plaintextimport.1  renderobjects.1  sfmimport.1  slashedtextimport.1  ubimport.1  upgrade_db.1  (+1 more)
harvest/: Makefile.am  emdroslang.re  emdroslang.yxx  emdroslang_classes.cpp  harvest.pro  harvest_fts.cpp  harvest_fts2.cpp  harvest_fts3.cpp  memobject.cpp  mingw.mak  renderobjects.cpp  renderxml.cpp  templatelang.re  templatelang.yxx  templatelang_classes.cpp  templatelang_lexer.cpp  templatelang_parser.cpp  templatelangpars.h  win32.mak  windows.mak
importers/: Makefile.am  mingw.mak  negraimporter.cpp  negraschema.h  penn_yylex.cpp  pennimporter.cpp  pennlexer.cpp  pennlexer.re  pennparser.cpp  pennparser.h  pennparser.yxx  pennschema.h  plaintextimporter.cpp  plaintextschema.h  sfmimporter.cpp  simplebibleschema.h  slashedtextschema.h  slashedtextschema.mql  tigerxmlimporter.cpp  unboundbibleimporter.cpp  win32.mak  windows.mak
include/: Makefile.am  Makefile.inc  agxml.h  arena.h  boilerplate_license.h  bpa.h  bpt2dumper.h  bpt2emdfdb.h  bptdumper.h  bptemdfdb.h  browsewidget.h  conf.h  conf_ini.h  configwizard.h  conn.h  conndlg.h  crc32_emdros.h  debug.h  djgpp.mak  dropdown_widget.h  emdf.h  emdf_enums.h  emdf_exception.h  emdf_ffeatures.h  emdf_hash.h  emdf_output.h  emdf_primes.h  emdf_value.h  emdf_wstring.h  emdfdb.h  emdfxml.h  emdros-lconfig.h.in  emdros-version.h.in  emdros_environment.h  emdros_reserved_words.h  emdroslang_classes.h  emdroslang_lexer.h  encryption.h  enum_const_cache.h  environment_emdros.h  (+91 more)
pcre/: Makefile.am  config.h  config.h.win32  djgpp.mak  mingw.mak  pcre.pro  pcre_info.c  pcre_try_flipped.c  win32.mak
pcre2/: Makefile.am  windows.mak
sqlite3/: Makefile.am  VERSION  mingw.mak  sqlite3_emdros.1  win32.mak  windows.mak
src/: Makefile.am  agexport.cpp  bptdetach.cpp  bptdump.cpp  bptdump.pro  common.pro  djgpp.mak  fts_harvester.cpp  fts_harvester.pro  fts_indexer.cpp  fts_indexer.pro  manage_indices.cpp  mingw.mak  mql.cpp  mql.pro  mqldump.cpp  mqldump.pro  negraimport.cpp  pennimport.cpp  plaintextimport.cpp  renderobjects.pro  renderobjectstool.cpp  sfmimport.cpp  slashedtextimport.cpp  src.pro  tigerxmlimport.cpp  ubimport.cpp  upgrade_db.cpp  win32.mak  windows.mak
tests/: Info.plist.htmlcanvastest.in  Info.plist.htreetest.in  Makefile.am  bptqa.h  bptqa.h.in  bptqa2h.py  bpttry.cpp  djgpp.mak  emdftry.cpp  emdros_utiltry.cpp  erwtry.cpp  file2h.py  htmlcanvastest.cpp  htreetest.cpp  jsontry.cpp  mingw.mak  mqllingtry.cpp  mqlqa.h  mqlqa.h.in  mqltry.cpp  qa2h.py  qdtry.cpp  testincludes.cpp  win32.mak  win32_testall.bat  windows.mak
util/: Makefile.am  agxml.cpp  bpt2dumper.cpp  bptdumper.cpp  conf.cpp  conf_ini.cpp  djgpp.mak  emdfxml.cpp  emdfxml.dtd  erw.cpp  md5_emdros.cpp  messages.cpp  mingw.mak  mql_exporter.cpp  negraimporter.cpp  negraschema.mql  opt.cpp  pennimporter.cpp  pennlexer.lxx  pennlexer.re  pennparser.yxx  pennschema.mql  pennschema_id_d.mql  plaintextimporter.cpp  plaintextschema.mql  schema.cpp  sfm.cpp  sfmimporter.cpp  simplebibleschema.mql  slashedtextimporter.cpp  tigerxmlimporter.cpp  unboundbibleimporter.cpp  util.pro  win32.mak  windows.mak
win32/: Makefile.am  README.MinGW.Windows.txt  README.txt  body.mak  config.h.win32  config.mak.in  emdros-logo-installer.xcf  emdros.nsi.in  lconfig.h.win32  lconfig.h.win32.in  mingw-body.mak  mingw-config.sed  mingw.mak  win32.mak
wx/: EmdrosSplashScreen.xpm  Makefile.am  blue-E-big.xcf  (+32 more)
(+1467 files in other folders)
